# projet-compression-4K

./: .gitignore  CMakeLists.txt  compilOpenCV.sh  script.sh
Documents/super-pixel/: How SLIC algorithm works  SLIC algorithm  Segmentation_d'images_en_superpixels_via_SLIC.url  Super-pixels_methodes.url
QT_version/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  SDGT.cpp  SDGT.h  SDGTWorker.cpp  SDGTWorker.h  SLIC.cpp  SLIC.h  SLICWorker.cpp  SLICWorker.h  Superpixel.cpp  Superpixel.h  compilOpenCV.sh  customgraphicsview.cpp  customgraphicsview.h  global.h  launch.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sdgtdialog.cpp  sdgtdialog.h  selectorcolorbutton.cpp  selectorcolorbutton.h  slicdialog.cpp  slicdialog.h  timer.h
QT_version/opencv-4.11.0/build-install/include/opencv4/opencv2/: cvconfig.h
QT_version/opencv-4.11.0/build-install/lib/: libopencv_calib3d.so.4.11.0  libopencv_calib3d.so.411  libopencv_core.so.411  libopencv_dnn.so.411  libopencv_features2d.so.4.11.0  libopencv_features2d.so.411  libopencv_flann.so.4.11.0  libopencv_flann.so.411  libopencv_gapi.so.411  libopencv_highgui.so.4.11.0  libopencv_highgui.so.411  libopencv_imgcodecs.so.4.11.0  libopencv_imgcodecs.so.411  libopencv_imgproc.so.411  libopencv_ml.so.4.11.0  libopencv_ml.so.411  libopencv_objdetect.so.4.11.0  libopencv_objdetect.so.411  libopencv_photo.so.4.11.0  libopencv_photo.so.411  libopencv_stitching.so.4.11.0  libopencv_stitching.so.411  libopencv_video.so.4.11.0  libopencv_video.so.411  libopencv_videoio.so.4.11.0  libopencv_videoio.so.411
QT_version/opencv-4.11.0/build-install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
QT_version/opencv-4.11.0/build-install/lib/python3.12/dist-packages/cv2/typing/: __init__.py
src/: ImageUtils.cpp  ImageUtils.hpp  SDGT.cpp  SDGT.hpp  SLIC.cpp  SLIC.hpp  Superpixel.cpp  Superpixel.hpp  global.hpp  main.cpp  timer.hpp
src/image/test/: OIP.ppm  RGB_Y_OIP.ppm  txt.txt
